contacts/VolodymyrRomanchuk-fixed3-2023-01-16
add different layout shifts for 320px & 480px

--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -7,6 +7,16 @@
   top: -353px;
 }
 
+@include mobile {
+  .contacts.section {
+    height: 1192px;
+  }
+  .contacts__offset-container {
+    position: relative;
+    top: -349px;
+  }
+}
+
 .contacts__boxes {
   display: flex;
   flex-wrap: wrap;
